--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+
+  <h1>Team Members</h1>
+  <div id="team-container"></div>
+
   <script src="js/script.js"></script>
 </body>
 
