bonus 2 + esercizio finito

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 <body>
 
-  <h1>Team Members</h1>
+  <h1>Our Team</h1>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique ipsum molestias, modi ex perferendis praesentium
+    assumenda consectetu eveniet suscipit.</p>
   <div id="team-container"></div>
 
   <script src="js/script.js"></script>
